--- a/itis3135/project_overview.html
+++ b/itis3135/project_overview.html
@@ -1,44 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Project Overview – Charlotte Boxing Club Web App</title>
-  <link rel="stylesheet" href="styles/default.css" />
-  <style>
-    body {
-      background-color: #005035;
-      color: white;
-      font-family: monospace;
-      text-align: center;
-      padding: 20px;
-    }
-    header, footer {
-      padding: 10px;
-    }
-    nav ul, footer ul {
-      list-style-type: none;
-      padding: 0;
-    }
-    nav ul li, footer ul li {
-      display: inline;
-      margin-right: 15px;
-    }
-    img {
-      max-width: 100%;
-      height: auto;
-    }
-    ol {
-      list-style-position: inside;
-      text-align: center;
-    }
-  </style>
+  <link rel="stylesheet" href="styles/default.css">
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
-  <header>
+  <header>  
     <h1>Bobby Yun’s Ballsy Yeti ITIS3135</h1>
   </header>
-  
+
   <nav>
     <ul>
       <li><a href="https://webpages.charlotte.edu/cyun2/">Home</a></li>
@@ -46,7 +19,7 @@
       <li><a href="contract.html">Contract</a></li>
       <li><a href="https://webpages.charlotte.edu/cyun2/ballsyyeti/">Whimsical Company</a></li>
       <li><a href="https://webpages.charlotte.edu/cyun2/stuff/free%5EVBucks%5EHere.htm">CRAPPY Website</a></li>
-      <li><a href="website_evaluations.html">Website Evaluation</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/itis3135/website_evaluations.html">Website Evaluation</a></li>
       <li><a href="https://webpages.charlotte.edu/cyun2/itis3135/tables.html">HTML Tables</a></li>
       <li><a href="BYOintro.html">BYO Intro</a></li>
       <li><a href="slideshow.html">Slideshow</a></li>
@@ -54,48 +27,44 @@
     </ul>
   </nav>
 
-  <img src="images/boxing.jpg" alt="Boxing Image" />
+  <main>
+    <h2>Project Overview – Charlotte Boxing Club Web App</h2>
 
-  <h2>Project Overview – Charlotte Boxing Club Web App</h2>
+    <img src="images/boxing.jpg" alt="Charlotte Boxing" width="300">
 
-  <h3>1. Project Overview</h3>
-  <ul>
-    <li><strong>Purpose:</strong> To create an interactive and informative website for the Charlotte Boxing Club, streamlining communications and recruitment.</li>
-    <li><strong>Intended Users:</strong> Current UNCC students.</li>
-    <li><strong>Content:</strong> Club information, training schedules, leadership bios, equipment resources, and a signup form.</li>
-  </ul>
+    <h3>1. Project Overview</h3>
+    <p><strong>Purpose:</strong> To create an interactive and informative website for the Charlotte Boxing Club, streamlining communications and recruitment.</p>
+    <p><strong>Intended Users:</strong> Current UNCC students.</p>
+    <p><strong>Content:</strong> Club information, training schedules, leadership bios, equipment resources, and a signup form.</p>
 
-  <h3>2. Client Information</h3>
-  <ul>
-    <li><strong>Name:</strong> Charlotte Boxing Club</li>
-    <li><strong>Organization:</strong> Charlotte Boxing Club</li>
-    <li><strong>Email:</strong> CharlotteBoxing@Charlotte.edu</li>
-    <li><strong>Phone:</strong> 555-555-5555</li>
-  </ul>
+    <h3>2. Client Information</h3>
+    <p><strong>Name:</strong> Charlotte Boxing Club</p>
+    <p><strong>Organization:</strong> Charlotte Boxing Club</p>
+    <p><strong>Email:</strong> CharlotteBoxing@Charlotte.edu</p>
+    <p><strong>Phone:</strong> 555-555-5555</p>
 
-  <h3>3. Wireframe</h3>
-  <img src="images/wireframe.jpg" alt="Homepage wireframe for Charlotte Boxing Club" />
-  <p>Homepage wireframe – Layout includes navigation bar, centered logo and title, login button, and hero image with welcome message overlayed.</p>
+    <h3>3. Wireframe</h3>
+    <img src="images/wireframe.jpg" alt="Homepage wireframe for Charlotte Boxing Club" width="500">
+    <p>Homepage wireframe – Layout includes navbar, logo, title, login button, and a large hero image with a welcome message.</p>
 
-  <h3>4. Site Map</h3>
-  <img src="images/sitemap.jpg" alt="Site map for Charlotte Boxing Club" />
-  <p>Site Map – Six interconnected pages accessible via the navigation bar, each page leads to informational or interactive content.</p>
+    <h3>4. Site Map</h3>
+    <img src="images/sitemap.jpg" alt="Site map for Charlotte Boxing Club" width="500">
+    <p>Site Map – Six interconnected pages accessible via the navigation bar. Each leads to a relevant section of the site.</p>
 
-  <h3>5. Website Pages</h3>
-  <ol>
-    <li><strong>Home:</strong> Reloads the homepage. Contains hero image and welcome message.</li>
-    <li><strong>About:</strong> Informative page about club history, mission, and vision.</li>
-    <li><strong>Schedule:</strong> Displays training schedules and event times in an organized format.</li>
-    <li><strong>Leadership:</strong> Lists bios and contact information of club leadership.</li>
-    <li><strong>Equipment:</strong> Provides a list of required equipment with external resource links (e.g., gloves, mouthguard).</li>
-    <li><strong>Signup:</strong> Contains a form for new members to register with validation.</li>
-  </ol>
+    <h3>5. Website Pages</h3>
+    <ul>
+      <li><strong>Home:</strong> Reloads the homepage. Contains hero image and welcome message.</li>
+      <li><strong>About:</strong> Informative page describing the club's mission and background.</li>
+      <li><strong>Schedule:</strong> Displays training sessions and event details in a calendar-style layout.</li>
+      <li><strong>Leadership:</strong> Shows bios and photos of club leaders with hover interactivity.</li>
+      <li><strong>Equipment:</strong> Provides links and information on required boxing gear (gloves, headgear, etc.).</li>
+      <li><strong>Signup:</strong> New member registration form with validation and confirmation message.</li>
+    </ul>
 
-  <h3>6. Notes & Signature</h3>
-  <ul>
-    <li><strong>Statement:</strong> I affirm this is my original work. No one else’s code was copied or pasted.</li>
-    <li><strong>Signed:</strong> Bobby Yun, 04/30/2025 2:05AM</li>
-  </ul>
+    <h3>6. Notes & Signature</h3>
+    <p><strong>Statement:</strong> I affirm this is my original work. No one else’s code was copied or pasted.</p>
+    <p><strong>Signed:</strong> Bobby Yun, 04/30/2025 2:05AM</p>
+  </main>
 
   <footer>
     <ul>
