--- a/itis3135/project_overview.html
+++ b/itis3135/project_overview.html
@@ -109,13 +109,13 @@
 
     <h2 class="section-title">3. Wireframe</h2>
     <div class="site-section">
-      <img src="images/boxing-wireframe.png" alt="Homepage wireframe for Charlotte Boxing Club" />
+      <img src="images/wireframe.jpg" alt="Homepage wireframe for Charlotte Boxing Club" />
       <p>Homepage wireframe – layout includes navbar, hero image, schedule grid, and footer.</p>
     </div>
 
     <h2 class="section-title">4. Site Map</h2>
     <div class="site-section">
-      <img src="images/boxing-sitemap.png" alt="Site map for Charlotte Boxing Club" />
+      <img src="images/sitemap.jpg" alt="Site map for Charlotte Boxing Club" />
       <p>Site Map – Six interconnected pages accessible via the navigation bar.</p>
     </div>
 
