--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -74,6 +74,7 @@
       <li><a href="BYOintro.html">BYO Intro</a></li>
       <li><a href="slideshow.html">Slideshow</a></li>
       <li><a href="drawing.html">Drawing</a></li>
+      <li><a href="project_overview.html">Project Overview</a></li>
     </ul>
   </nav>
 
