--- a/itis3135/project_home.html
+++ b/itis3135/project_home.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Charlotte Boxing Club – Home</title>
-  <link rel="stylesheet" href="styles/default.css" />
+  <link rel="stylesheet" href="styles/default.css">
   <style>
     body {
       background-color: #005035;
@@ -13,47 +13,67 @@
       margin: 0;
       padding: 0;
     }
+
     nav ul, footer ul {
       list-style: none;
       padding: 0;
       margin: 0;
     }
+
     nav ul li, footer ul li {
       display: inline;
       margin: 0 10px;
     }
+
     nav ul li a,
     footer ul li a,
     footer a {
       color: white;
       text-decoration: underline;
     }
+
     main {
       max-width: 900px;
       margin: 0 auto;
       padding: 20px;
     }
+
+    section {
+      margin: 40px 0;
+      text-align: left;
+    }
+
+    h2, h3 {
+      text-align: center;
+      font-family: 'Courier New', monospace;
+    }
+
     img {
+      max-width: 100%;
+      height: auto;
       display: block;
       margin: 20px auto;
-      max-width: 600px;
-      width: 90%;
-      border-radius: 10px;
     }
-    h2 {
-      font-family: "Courier New", monospace;
+
+    a {
+      color: #87cefa;
+    }
+
+    strong {
+      display: inline-block;
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>Charlotte Boxing Club</h1>
+    <h1>Bobby Yun’s Ballsy Yeti ITIS3135</h1>
   </header>
 
   <nav>
     <ul>
-      <li><a href="project_homepage.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="schedule.html">Schedule</a></li>
       <li><a href="leadership.html">Leadership</a></li>
@@ -63,11 +83,43 @@
   </nav>
 
   <main>
-    <h2>Welcome to Charlotte Boxing Club</h2>
-    <img src="images/boxing.jpg" alt="Charlotte Boxing Hero Image" />
+    <h2>Welcome to the Charlotte Boxing Club</h2>
+
+    <img src="images/boxing.jpg" alt="Charlotte Boxing Club Hero Image">
+
+    <p>Step into the ring with Charlotte Boxing Club and discover the art of boxing like never before! Our program not only teaches fundamentals—footwork, punching, and defense—but also provides a full-body workout that boosts confidence, relieves stress, and keeps you in peak shape.</p>
+
+    <p>Whether you're looking to stay active, challenge yourself, or build new friendships in a supportive environment, Charlotte Boxing Club is the place to be. No experience needed!</p>
+
+    <h3>Important Registration Info</h3>
     <p>
-      The Charlotte Boxing Club at UNCC is dedicated to training, discipline, and camaraderie. Whether you're new or returning, come join our community and level up your boxing journey!
+      Please complete the DSE registration to be eligible to practice.  
+      <a href="https://ninerengage.charlotte.edu/organization/charlotteboxing">Charlotte Boxing Club DSE</a>
     </p>
+
+    <h3>Location</h3>
+    <p>Belk Gym<br>Mat Room 011 / 020</p>
+
+    <h3>Meeting Times</h3>
+    <p>
+      Monday: 4–7 PM, 8–10 PM<br>
+      Wednesday: 8–10 PM
+    </p>
+
+    <h3>Requirements</h3>
+    <p>The club provides gloves and hand wraps to borrow. If you train regularly, please bring your own:</p>
+    <ul>
+      <li>Hand wraps (180 in)</li>
+      <li>16 oz boxing gloves (RECOMMENDED)</li>
+      <li>Boxing shoes (OPTIONAL)</li>
+    </ul>
+
+    <h3>Have Questions?</h3>
+    <p>Ask us on:</p>
+    <ul>
+      <li><a href="https://instagram.com/charlotteboxingclub">Instagram</a></li>
+      <li><a href="https://discord.com/invite/charlotteboxing">Discord</a></li>
+    </ul>
   </main>
 
   <footer>
