--- a/itis3135/project_home.html
+++ b/itis3135/project_home.html
@@ -87,39 +87,16 @@
 
     <img src="images/boxing.jpg" alt="Charlotte Boxing Club Hero Image">
 
-    <p>Step into the ring with Charlotte Boxing Club and discover the art of boxing like never before! Our program not only teaches fundamentals—footwork, punching, and defense—but also provides a full-body workout that boosts confidence, relieves stress, and keeps you in peak shape.</p>
+    <p>Step into the ring with Charlotte Boxing Club and discover the art of boxing like never before! Our program not only teaches fundamentals: footwork, punching, and defense, but also provides a full-body workout that boosts confidence, relieves stress, and keeps you in peak shape.</p>
 
     <p>Whether you're looking to stay active, challenge yourself, or build new friendships in a supportive environment, Charlotte Boxing Club is the place to be. No experience needed!</p>
 
     <h3>Important Registration Info</h3>
     <p>
-      Please complete the DSE registration to be eligible to practice.  
-      <a href="https://ninerengage.charlotte.edu/organization/charlotteboxing">Charlotte Boxing Club DSE</a>
+      Please complete the DSE registration for Charlotte Boxing to be eligible to practice (it's free).  
+      <a href="https://charlotte.dserec.com/online/clubsports">UNCC Sport Clubs DSE</a>
     </p>
 
-    <h3>Location</h3>
-    <p>Belk Gym<br>Mat Room 011 / 020</p>
-
-    <h3>Meeting Times</h3>
-    <p>
-      Monday: 4–7 PM, 8–10 PM<br>
-      Wednesday: 8–10 PM
-    </p>
-
-    <h3>Requirements</h3>
-    <p>The club provides gloves and hand wraps to borrow. If you train regularly, please bring your own:</p>
-    <ul>
-      <li>Hand wraps (180 in)</li>
-      <li>16 oz boxing gloves (RECOMMENDED)</li>
-      <li>Boxing shoes (OPTIONAL)</li>
-    </ul>
-
-    <h3>Have Questions?</h3>
-    <p>Ask us on:</p>
-    <ul>
-      <li><a href="https://instagram.com/charlotteboxingclub">Instagram</a></li>
-      <li><a href="https://discord.com/invite/charlotteboxing">Discord</a></li>
-    </ul>
   </main>
 
   <footer>
