--- a/itis3135/project_home.html
+++ b/itis3135/project_home.html
@@ -9,37 +9,62 @@
       background-color: #005035;
       color: white;
       font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
       text-align: center;
-      margin: 0;
-      padding: 0;
+      padding: 15px;
     }
 
-    nav ul, footer ul {
+    nav {
+      background-color: #003f2a;
+      padding: 10px 0;
+    }
+
+    nav ul {
       list-style: none;
-      padding: 0;
       margin: 0;
+      padding: 0;
+      text-align: center;
     }
 
-    nav ul li, footer ul li {
+    nav ul li {
       display: inline;
-      margin: 0 10px;
+      margin: 0 15px;
     }
 
-    nav ul li a,
-    footer ul li a,
-    footer a {
+    nav ul li a {
       color: white;
       text-decoration: underline;
+      font-size: 1.5em; /* 3x larger than default */
     }
 
-    main {
+    .hero-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 30px;
+      flex-wrap: wrap;
+      padding: 40px 20px;
+    }
+
+    .hero-container img {
+      width: 300px;
+      border-radius: 8px;
+    }
+
+    .hero-text {
+      flex: 1;
+      max-width: 500px;
+      text-align: left;
+    }
+
+    .content {
       max-width: 900px;
       margin: 0 auto;
-      padding: 20px;
-    }
-
-    section {
-      margin: 40px 0;
+      padding: 30px 20px;
       text-align: left;
     }
 
@@ -48,20 +73,27 @@
       font-family: 'Courier New', monospace;
     }
 
-    img {
-      max-width: 100%;
-      height: auto;
-      display: block;
-      margin: 20px auto;
+    footer {
+      background-color: #003f2a;
+      text-align: center;
+      padding: 20px;
     }
 
-    a {
-      color: #87cefa;
+    footer ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
     }
 
-    strong {
-      display: inline-block;
-      margin-top: 10px;
+    footer ul li {
+      display: inline;
+      margin: 0 10px;
+    }
+
+    footer ul li a,
+    footer a {
+      color: white;
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -73,30 +105,71 @@
 
   <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="schedule.html">Schedule</a></li>
-      <li><a href="leadership.html">Leadership</a></li>
-      <li><a href="equipment.html">Equipment</a></li>
-      <li><a href="signup.html">Signup</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/">Home</a></li>
+      <li><a href="introduction.html">Introduction</a></li>
+      <li><a href="contract.html">Contract</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/ballsyyeti/">Whimsical Company</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/stuff/free%5EVBucks%5EHere.htm">CRAPPY Website</a></li>
+      <li><a href="website_evaluations.html">Website Evaluation</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/itis3135/tables.html">HTML Tables</a></li>
+      <li><a href="BYOintro.html">BYO Intro</a></li>
+      <li><a href="slideshow.html">Slideshow</a></li>
+      <li><a href="drawing.html">Drawing</a></li>
+      <li><a href="project_overview.html">Project Overview</a></li>
     </ul>
   </nav>
 
   <main>
-    <h2>Welcome to the Charlotte Boxing Club</h2>
+    <div class="hero-container">
+      <img src="images/boxing.jpg" alt="Charlotte Boxing Hero Image">
+      <div class="hero-text">
+        <h2>Welcome to the Charlotte Boxing Club</h2>
+        <p>Step into the ring with Charlotte Boxing Club and discover the art of boxing like never before! Our program teaches the fundamentals—footwork, punching, defense—and provides a full-body workout that boosts confidence, relieves stress, and keeps you in peak shape.</p>
+        <p>Whether you're looking to stay active, challenge yourself, or build new friendships in a supportive environment, Charlotte Boxing Club is the place to be. No experience needed!</p>
+      </div>
+    </div>
 
-    <img src="images/boxing.jpg" alt="Charlotte Boxing Club Hero Image">
+    <div class="content">
+      <h3>Training Information</h3>
+      <p><strong>Location:</strong> Belk Gym – Mat Room 011/020</p>
+      <p><strong>Meeting Times:</strong><br>
+        Monday: 4–7 pm / 8–10 pm<br>
+        Wednesday: 8–10 pm</p>
 
-    <p>Step into the ring with Charlotte Boxing Club and discover the art of boxing like never before! Our program not only teaches fundamentals: footwork, punching, and defense, but also provides a full-body workout that boosts confidence, relieves stress, and keeps you in peak shape.</p>
+      <p><strong>Requirements:</strong> The club provides a few gloves and wraps for newcomers. If you plan to train regularly, you should purchase your own gear: 16oz gloves and 180" hand wraps are <strong>RECOMMENDED</strong>; boxing shoes are <em>OPTIONAL</em>.</p>
 
-    <p>Whether you're looking to stay active, challenge yourself, or build new friendships in a supportive environment, Charlotte Boxing Club is the place to be. No experience needed!</p>
+      <h3>Membership & Registration</h3>
+      <ul>
+        <li>$30 membership fee (non-refundable)</li>
+        <li>Payment deadline: 2/17</li>
+        <li>Must complete DSE form to be allowed at practice</li>
+        <li>Hoodies and T-shirts are separate purchases</li>
+      </ul>
+      <p><strong>Note:</strong> All members can try sessions for the first two weeks at no cost to see if it’s the right fit!</p>
 
-    <h3>Important Registration Info</h3>
-    <p>
-      Please complete the DSE registration for Charlotte Boxing to be eligible to practice (it's free).  
-      <a href="https://charlotte.dserec.com/online/clubsports">UNCC Sport Clubs DSE</a>
-    </p>
+      <h3>Meet the Coaches</h3>
+      <p><strong>Coach Joseph:</strong> A seasoned boxer with 55 amateur fights, Joseph leads with discipline, motivation, and heart. He helps members grow both in the ring and personally.</p>
+      <p><strong>Assistant Coach Jalen:</strong> Introduced through Coach Joseph, Jalen joined as assistant coach last year. With a love for the sport and the community, he supports members and brings positive energy to the club.</p>
 
+      <h3>Training Style</h3>
+      <p>Sessions include warm-ups, drills, and technique practice. Sparring is optional and requires prior coach approval for safety.</p>
+
+      <h3>Academics First</h3>
+      <p>We prioritize school. If you miss training for academics, we fully understand. Just let us know!</p>
+
+      <h3>Club Gear & Events</h3>
+      <ul>
+        <li>Rental gear available—see club officers</li>
+        <li>Events include hiking, grilling, paddle boating, etc.</li>
+        <li>Hoodies and shirts coming soon (base price only)</li>
+      </ul>
+
+      <h3>Need Help?</h3>
+      <p>Ask us on:
+        <a href="https://www.instagram.com/charlotteboxingclub/">Instagram</a> |
+        <a href="https://discord.com/invite/charlotteboxingclub">Discord</a>
+      </p>
+    </div>
   </main>
 
   <footer>
