--- a/itis3135/project_home.html
+++ b/itis3135/project_home.html
@@ -83,6 +83,23 @@
       color: white;
       text-decoration: underline;
     }
+
+    .contact-info {
+      margin-top: 10px;
+      font-size: 0.95em;
+    }
+
+    .contact-info ul {
+      list-style: none;
+      padding: 0;
+      margin: 0 auto;
+      max-width: 400px;
+      text-align: left;
+    }
+
+    .contact-info li {
+      margin: 3px 0;
+    }
   </style>
 </head>
 <body>
@@ -126,6 +143,15 @@
     </ul>
     <p>&copy; 2025 <a href="https://webpages.charlotte.edu/cyun2/bobbybuiltit.co/" target="_blank">BobbyBuiltIt.co</a></p>
     <p><em>“Built By Bobby.”</em></p>
+
+    <div class="contact-info">
+      <ul>
+        <li><strong>Name:</strong> Charlotte Boxing Club</li>
+        <li><strong>Organization:</strong> Charlotte Boxing Club</li>
+        <li><strong>Email:</strong> CharlotteBoxing@Charlotte.edu</li>
+        <li><strong>Phone:</strong> 555-555-5555</li>
+      </ul>
+    </div>
   </footer>
 
 </body>
