--- a/itis3135/project_home.html
+++ b/itis3135/project_home.html
@@ -38,7 +38,7 @@
     nav ul li a {
       color: white;
       text-decoration: underline;
-      font-size: 1.5em; /* 3x larger than default */
+      font-size: 1.5em; 
     }
 
     .hero-container {
@@ -136,6 +136,16 @@
   </main>
 
   <footer>
+    <div class="contact-info">
+        <ul>
+          <li><strong>Contacts:</strong></li>
+          <li><strong>Name:</strong> Charlotte Boxing Club</li>
+          <li><strong>Organization:</strong> Charlotte Boxing Club</li>
+          <li><strong>Email:</strong> CharlotteBoxing@Charlotte.edu</li>
+          <li><strong>Phone:</strong> 555-555-5555</li>
+        </ul>
+      </div>
+
     <ul>
       <li><a href="https://webpages.charlotte.edu/cyun2/">CLT Web</a></li>
       <li><a href="https://github.com/hungry-bobby">GitHub</a></li>
@@ -143,15 +153,6 @@
     </ul>
     <p>&copy; 2025 <a href="https://webpages.charlotte.edu/cyun2/bobbybuiltit.co/" target="_blank">BobbyBuiltIt.co</a></p>
     <p><em>“Built By Bobby.”</em></p>
-
-    <div class="contact-info">
-      <ul>
-        <li><strong>Name:</strong> Charlotte Boxing Club</li>
-        <li><strong>Organization:</strong> Charlotte Boxing Club</li>
-        <li><strong>Email:</strong> CharlotteBoxing@Charlotte.edu</li>
-        <li><strong>Phone:</strong> 555-555-5555</li>
-      </ul>
-    </div>
   </footer>
 
 </body>
